; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_ftp-wildcard.c_write_it.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_ftp-wildcard.c_write_it.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callback_data = type { i64 }

@stdout = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i64, i8*)* @write_it to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @write_it(i8* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.callback_data*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to %struct.callback_data*
  store %struct.callback_data* %12, %struct.callback_data** %9, align 8
  store i64 0, i64* %10, align 8
  %13 = load %struct.callback_data*, %struct.callback_data** %9, align 8
  %14 = getelementptr inbounds %struct.callback_data, %struct.callback_data* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %4
  %18 = load i8*, i8** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load %struct.callback_data*, %struct.callback_data** %9, align 8
  %22 = getelementptr inbounds %struct.callback_data, %struct.callback_data* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = call i64 @fwrite(i8* %18, i64 %19, i64 %20, i64 %23)
  store i64 %24, i64* %10, align 8
  br label %31

25:                                               ; preds = %4
  %26 = load i8*, i8** %5, align 8
  %27 = load i64, i64* %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = load i64, i64* @stdout, align 8
  %30 = call i64 @fwrite(i8* %26, i64 %27, i64 %28, i64 %29)
  store i64 %30, i64* %10, align 8
  br label %31

31:                                               ; preds = %25, %17
  %32 = load i64, i64* %10, align 8
  ret i64 %32
}

declare dso_local i64 @fwrite(i8*, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
